--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -24,6 +24,7 @@ dependencies:
   flutter:
     sdk: flutter
   provider: ^4.3.2+4
+  intl: ^0.16.1
 
 
   # The following adds the Cupertino Icons font to your application.
